# windsurf-tracking

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  QUICKSTART.md  README.md  clearml.conf  index.html  setup.sh  tailwind.config.ts
backend/: Dockerfile  requirements.txt
docker/: build-and-push.sh
docs/: API_CONFIGURATION.md  DATASET_ARCHITECTURE.md  DEPLOYMENT.md  PIPELINE_ARCHITECTURE.md  REFACTOR_DEBT.md  SPRINT-PLAN-SURFER-DATASET.md  TESTING.md  UX_ARCHITECTURE.md
frontend/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
kubernetes/: backend-deployment.yaml  backend-service.yaml  cpu-worker.yaml  frontend-deployment.yaml  frontend-service.yaml  gpu-workers.yaml  ingress-api.yaml  ingress-labelbee.yaml  (+9 more)
pipeline_engine/: README.md  __init__.py  artifacts.py  config.py  errors.py  models.example.yaml  models.py  pipeline.py  pyproject.toml  registry.py  runner.py  stage.py
pipeline_engine/evals/: __init__.py  metadata.py
pipeline_engine/handles/: __init__.py  anthropic.py  openai_compat.py  sam2_http.py  sam3_runpod.py  sam3_runpod_track.py  yolo_http.py
pipeline_engine/pipelines/: sail_brand_model.yaml
pipeline_engine/plugins/: __init__.py  crop_mask.py  sam3.py  segment.py  vlm_extract.py
pipeline_engine/schemas/: __init__.py  sail.py
pipeline_engine/tests/: test_anthropic.py  test_engine.py  test_handles.py  test_import_boundary.py  test_metadata_evals.py  test_registry_config.py  test_sam3.py  test_sam3_track.py  test_yolo_http.py
(+271 files in other folders)
